--- a/HelloWorld2/src/main/webapp/javascript/default.html
+++ b/HelloWorld2/src/main/webapp/javascript/default.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>default.html</title>
-    <script src="./js/loop.js"></script>
+
 </head>
 <body>
-   
+    <script src="./js/object_String/string_object.js"></script>
+
+    <!-- <input type="number" name="num1" id="num1" value="30"> +
+    <input type="number" name="num2" id="num2" value="50"> =
+    <input type="number" name="result" id="result"> <br>
+    <button onclick = "calc()">계산</button>
+     -->
+    <script>
+        // let val = document.querySelector('input[type="number"]').value;
+        // let val2 = document.querySelector('#num2').value;
+        // console.log(typeof val, val);
+        // console.log(parseInt(val) + parseInt(val2));
+
+        // num1, nu2 합 결과 result 
+        // function calc() {
+        //     let num1 = document.querySelector('#num1').value;
+        //     let num2 = document.querySelector('#num2').value;
+        //     let result = parseInt(num1) + parseInt(num2);
+        //     document.querySelector('#result').value = result; 
+        // }
+
+        // // 비워주기
+        // document.querySelector('#num1').value = '';
+        // document.querySelector('#num2').value = '';
+        // document.querySelector('#num1').focus();
+        
+    </script>
 </body>
 </html>
